# Editor

./: .clang-format  CMakeLists.txt  README.md  main.cpp  testFile.txt
class/: File.cpp  Input.cpp  Terminal.cpp
gui/include/: MainWindow.h
gui/src/: MainWindow.cpp  explorer.c  explorer.h  main.c  main.cpp  main.css  main.h  preferences.c  preferences.h  text_editor.c  text_editor.h
gui/ui/: builder.ui  jeejee.ui  window.ui
headers/: File.h  Input.h  Terminal.h
include/: File.h  Input.h  Syntax.h  Terminal.h
include/gui/: MainWindow.h
src/: File.cpp  Input.cpp  Syntax.cpp  Terminal.cpp  main.cpp
src/gui/: MainWindow.cpp  main.cpp
tui/include/: File.h  Input.h  Syntax.h  Terminal.h
tui/src/: File.cpp  Input.cpp  Syntax.cpp  main.cpp
